--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 
 			<!-- content overlay -->
 			<div class="row content mnh-100 no-gutters justify-content-center">
-				<div class="container px-4 px-md-0 overflow-hidden">
+				<div class="container px-3 px-md-0 overflow-hidden">
 					<div class="row mnh-80 align-content-center pt-5">
 						<div class="col-12">
 							<h1 class="title ft-montserrat">
@@ -29,7 +29,7 @@
 								<span class="title-animation-5 animate__animated animate__fadeInDown">ALL </span>
 								<span class="title-animation-6 animate__animated animate__fadeInDown">INCLUSIVE</span></h1>
 						</div>
-						<div class="col-12 col-md-8 mt-4" [ngsReveal]="scrollUpWithDelay">
+						<div class="col-12 col-md-7 mt-4" [ngsReveal]="scrollUpWithDelay">
 							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe
 								servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!
 							</p>
@@ -45,7 +45,7 @@
 					<!-- Chevrons -->
 					<div class="row">
 						<div class="col-12">
-							<app-home-chevron></app-home-chevron>
+							<app-chevron></app-chevron> 
 						</div>
 					</div>
 					<!-- End Chevrons -->
@@ -59,7 +59,7 @@
 	<!-- The second part of the website that you'll see when scrolling down -->
 	<div class="row no-gutters blue section-padding">
 		<div class="col">
-			<div class="container px-4 px-md-0">
+			<div class="container px-3 px-md-0">
 				<div class="row no-gutters align-content-center">
 
 					<!-- Tickets image -->
@@ -95,7 +95,7 @@
 
 	<!-- Reviews section carousel -->
 	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh" >
-		<div class="container px-4 px-md-0">
+		<div class="container px-3 px-md-0">
 			<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner" [ngsReveal]="scrollUp">
 					<div class="carousel-item active">
@@ -158,7 +158,7 @@
 	<!-- Personal attention row -->
 	<div class="row no-gutters section-padding">
 		<div class="col">
-			<div class="container px-4 px-md-0">
+			<div class="container px-3 px-md-0">
 				<div class="row">
 					<div class="col-12 col-md-5">
 						<div class="row align-content-center h-100">
@@ -188,7 +188,7 @@
 	<!-- The Tickevents Flow -->
 	<div class="row no-gutters section-padding bg-blue">
 		<div class="col">
-			<div class="container px-4 px-md-0">
+			<div class="container px-3 px-md-0">
 				<div class="row">
 					<div class="col-12 col-md-7 mt-3 mt-md-0 text-center text-md-left order-2 order-md-1" [ngsReveal]="scrollUp">
 						<img src="../../assets/combo.svg" alt="tickets" class="tickets-img-2 px-3">
@@ -218,7 +218,7 @@
 	<!-- Afspraken row -->
 	<div class="row no-gutters section-padding">
 		<div class="col">
-			<div class="container px-4">
+			<div class="container px-3">
 				<div class="row justify-content-center">
 					<div class="col-12 col-md-8">
 						<h5 class="pink" [ngsReveal]="scrollUp">Het Tickevents verschil</h5>
@@ -235,7 +235,7 @@
 	<!-- Call to Action part -->
 	<div class="row no-gutters section-padding bg-pink">
 		<div class="col">
-			<div class="container px-4 px-md-0">
+			<div class="container px-3 px-md-0">
 				<div class="row align-content-center">
 					<div class="col-12 col-md-5">
 						<div class="row align-content-center h-100">
