--- a/tickevents-placeholder/src/app/pricing/pricing.component.html
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.html
@@ -2,7 +2,7 @@
 
 	<!-- Header row, 50vh on full screen, 100vh on mobile -->
 	<div class="row no-gutters bg-pricing header-padding">
-		<div class="container px-4 px-md-0 first-section mt-5 my-md-5">
+		<div class="container px-3 px-md-0 first-section mt-5 my-md-5">
 			<div class="row no-gutters mnh-50vh">
 				<div class="col-12 col-md-6">
 					<div class="row h-100 no-gutters">
@@ -56,8 +56,8 @@
 		</div>
 	</div>
 
-	<div class="row no-gutters section-padding">
-		<div class="container px-4 px-md-0">
+	<div class="row no-gutters section-padding overflow-hidden">
+		<div class="container px-3 px-md-0">
 
 			<div class="row justify-content-center no-gutters mb-5" [ngsReveal]="scrollUpDelay">
 				<div class="col-12">
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 
-			<div class="row justify-content-center overflow-hidden py-4">
+			<div class="row justify-content-center py-4">
 				<div class="col-12 col-lg-4 price-box-left order-2 order-lg-1 " [ngsReveal]="priceboxScroll">
 					<div class="price-box h-100 row no-gutters px-3 pl-lg-3 pr-lg-5">
 
@@ -171,7 +171,7 @@
 	</div>
 
 	<div class="row no-gutters section-padding bg-blue w">
-		<div class="container px-4 px-md-0">
+		<div class="container px-3 px-md-0">
 			<div class="row no-gutters justify-content-between">
 				<div class="col-12 col-md-5">
 					<div class="row h-100 no-gutters align-content-center">
@@ -201,7 +201,7 @@
 	</div>
 
 	<div class="row no-gutters section-padding blue">
-		<div class="container px-4 px-md-0">
+		<div class="container px-3 px-md-0">
 			<div class="row no-gutters mb-0 mb-md-4">
 				<div class="col-12">
 					<h1 class="text-center title">Begin met winst maken in een paar stappen</h1>
@@ -245,7 +245,7 @@
 	</div>
 
 	<div class="row no-gutters section-padding pt-0">
-		<div class="container px-4 px-md-0">
+		<div class="container px-3 px-md-0">
 			<div class="row no-gutters justify-content-center">
 				<div class="col-12 col-md-8 text-center">
 					<h1 class="blue text-center section-title"><b>Ook profiteren?</b></h1>
