--- a/tickevents-placeholder/src/app/shared/chevron/chevron.component.html
+++ b/tickevents-placeholder/src/app/shared/chevron/chevron.component.html
@@ -1,10 +1,10 @@
 <!-- Chevrons -->
-<div class="row no-gutters h-100 align-content-end chevron-padding">
+<div class="row no-gutters h-100 chevron-padding">
     <div class="chevron-container">
         <div class="chevron"></div>
         <div class="chevron"></div>
         <div class="chevron"></div>
-        <span class="chevron-text">Scroll down</span>
+        <span class="chevron-text">{{text}}</span>
     </div>
 </div>
 <!-- End chevrons -->
