Added how-it-works component

--- a/tickevents-placeholder/src/app/getting-started/getting-started.component.html
+++ b/tickevents-placeholder/src/app/getting-started/getting-started.component.html
@@ -48,6 +48,37 @@
             </div>
             <!-- End title banner section -->
 
+            <!-- First info section -->
+            <div class="row no-gutters section-padding">
+                <div class="col">
+                    <div class="container px-3 px-md-0">
+                        <div class="row">
+                            <div class="col-12 col-md-5">
+                                <div class="row align-content-center h-100">
+                                    <div class="col-12" [ngsReveal]="scrollUp">
+                                        <h5 class="m-0 pink">Persoonlijke Benadering</h5>
+                                    </div>
+                                    <div class="col-12" [ngsReveal]="scrollUp">
+                                        <h2 class="section-title blue">Je staat er niet alleen voor. Tickevents denkt met je mee
+                                        </h2>
+                                    </div>
+                                    <div class="col-12 blue" [ngsReveal]="scrollUp">
+                                        <p>Tickevents gelooft in de persoonlijke benadering. Werken met abstracte, onbereikbare
+                                            ticketingplatformen is verleden tijd. Bij Tickevents denken we met je mee over je
+                                            evenement, en proberen wij jou te helpen waar we maar kunnen. Samen halen we het
+                                            meeste uit jouw evenement!</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-7 text-center text-md-right" [ngsReveal]="scrollUp">
+                                <img src="../../assets/friendship.svg" alt="tickets" class="tickets-img-2 px-3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End first info section -->
+
 
             <div class="row no-gutters section-padding">
                 <div class="container px-3 px-md-0">
