title section touch-up

--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
@@ -7,11 +7,11 @@
                 <div class="col">
                     <div class="container px-3 px-md-0 h-100">
                         <div class="row no-gutters h-100">
-                            <div class="col-12 text-center align-self-center">
-                                <h1 class="title m-0">Tickets verkopen voor je event was nog nooit zo makkelijk</h1>
+                            <div class="col-12 align-self-center">
+                                <h1 class="title m-0">TICKETS VERKOPEN VOOR JE EVENEMENT WAS NOG NOOIT ZO MAKKELIJK</h1>
                                 <a routerLink="/register" class="cta btn mt-4 mb-0 my-md-5">Evenement aanmaken</a>
                             </div>
-                            <div class="col-12 align-self-end text-center justify-content-center">
+                            <div class="col-12 align-self-end text-center justify-content-center d-md-none">
                                 <app-chevron text="Meer info"></app-chevron>
                             </div>
                         </div>
