--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
@@ -8,9 +8,9 @@
 
 /* Title section */
 .title {
-    font-size: 2.1em;
+    font-size: 1.9em;
     font-weight: 600;
-    font-family: 'Alata', sans-serif;
+    font-family: 'montserrat', sans-serif;
 }
 
 .subtitle {
@@ -129,7 +129,7 @@ button[disabled] {
     }
 
     .title-section {
-        min-height: 30vh;
+        min-height: 50vh;
     }
 
     .title {
