--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
@@ -7,6 +7,10 @@
 
 
 /* Title section */
+.section-padding.header-padding {
+    padding-top: 125px !important;
+}
+
 .title {
     font-size: 1.9em;
     font-weight: 600;
@@ -23,15 +27,21 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 
     min-height: 100vh;
+}
+
+.section-text {
+    line-height: 1.75em;
+    margin-top: 0.5em;
 }
 
 .cta.btn {
     background-color: #EA8585;
     color: white;
     font-weight: 500;
-    font-size: 1.25em;
+    font-size: 1.15em;
     -webkit-transition-duration: 0s;
     -o-transition-duration: 0s;
     transition-duration: 0s;
@@ -72,60 +82,131 @@
     transition: background-color 0.2s ease;
 }
 
-/* End title section */
-
-/* Subtitle section */
-.banner {
-    font-size: 1.35em !important;
-}
-
-/* .my-slide div {
-display: table-cell;
-} */
-/* End subtitle section */
-
-
-.form-check {
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-button[disabled] {
-    pointer-events: none;
-    -webkit-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-
-.form-control {
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid black
-}
-
-.input-group-text {
-    background-color: rgba(0, 0, 0, 0) !important;
-    border: none !important;
-}
-
-.tickets-img-1 {
-    max-width: 100%;
+.tickets-img {
+    height: 350px;
     width: auto;
+    max-width: 100%;
     max-height: 100%;
-    margin-left: auto;
-    margin-right: 0;
     border-radius: 15px;
     margin-top: auto;
     margin-bottom: auto;
 }
+
+/* QR Animation */
+#red-bar {
+    animation: moveUpAndDown;
+    animation-duration: 2.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes moveUpAndDown {
+    from {
+        transform: translateY(-40px) 
+    }
+
+    to {
+        transform: translateY(40px)
+    }
+}
+
+/* End QR Animation */
+
+/* Social Media animation */
+#social_media {
+    overflow: visible;
+}
+
+#facebook {
+    animation-delay: 2s !important;
+    animation: enlargeTopRight;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+}
+
+#twitter {
+    animation-delay: 4s !important;
+    animation: enlargeCenterRight;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+}
+
+#insta {
+    animation: enlargeBottomRight;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+}
+
+#horn {
+    animation: horn;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    transform-origin: -20px center;
+}
+
+@keyframes enlargeTopRight {
+
+    0%,
+    25% {
+        transform: translateX(10px) translateY(-10px)
+    }
+
+    25%,
+    100% {
+        transform: translateX(0) translateY(-0)
+    }
+}
+
+@keyframes enlargeCenterRight {
+
+    0%,
+    25% {
+        transform: translateX(10px)
+    }
+
+    25%,
+    100% {
+        transform: translateX(0)
+    }
+}
+
+@keyframes enlargeBottomRight {
+
+    0%,
+    25% {
+        transform: translateX(10px) translateY(10px)
+    }
+
+    25%,
+    100% {
+        transform: translateX(0) translateY(-0)
+    }
+}
+
+@keyframes horn {
+    0%, 10% { transform: scale(1.05)}
+    10%, 20% { transform: scale(1)}
+    30%, 40% { transform: scale(1.05)}
+    40%, 50% { transform: scale(1)}
+}
+
+/* End Social Media animation */
 
 /* Breakpoints */
 /* md-breakpoint */
 @media (min-width: 765px) {
     .header-padding.section-padding {
         padding-top: 175px !important;
+        padding-bottom: 100px !important
     }
 
     .title-section {
@@ -143,5 +224,9 @@ button[disabled] {
 
     .svg-container {
         height: 100px
+    }
+
+    .cta.btn {
+        font-size: 1.25em;
     }
 }
