finishing touches on How It Works page

--- a/tickevents-placeholder/src/custom.css
+++ b/tickevents-placeholder/src/custom.css
@@ -26,6 +26,7 @@ Place your color classes here if you need to use them more than once.
 .pink { color: #EA8585 !important;}
 
 .bg-red {background-color: red !important;}
+.bg-gray {background-color: #f7f7f7 !important;}
 .bg-blue { background: -webkit-gradient(linear, right top, left top, from(#092134), to(#0C2C45)); background: -o-linear-gradient(right, #092134, #0C2C45); background: linear-gradient(270deg, #092134, #0C2C45); }
 .bg-pink { background: -webkit-gradient(linear, left top, right top, from(#EA8585), to(#ED9696)); background: -o-linear-gradient(left, #EA8585, #ED9696); background: linear-gradient(90deg, #EA8585, #ED9696);}
 
