--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
@@ -5,10 +5,44 @@
 * Browsers: last 4 version
 */
 
+/* Section background */
+.section-container {
+    position: relative;
+}
 
-/* Title section */
+.section-row {
+    overflow: visible;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    min-height: 110%;
+    margin-top: -10px;
+    width: 100%;
+    opacity: 0;
+}
+
+.section-background {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100% !important;
+    border-radius: 20px;
+    margin-bottom: -20px;
+    padding: 0 !important;
+}
+/* End Section background */
+
+.svg-col {
+    padding-top: 75px
+}
+
 .section-padding.header-padding {
     padding-top: 125px !important;
+}
+
+.section-padding {
+    padding-bottom: 0px !important;
 }
 
 .title {
@@ -18,7 +52,7 @@
 }
 
 .subtitle {
-    font-size: 1em;
+    font-size: 1.25em;
     font-weight: 400 !important;
 }
 
@@ -30,11 +64,6 @@
     background-attachment: fixed;
 
     min-height: 100vh;
-}
-
-.section-text {
-    line-height: 1.75em;
-    margin-top: 0.5em;
 }
 
 .cta.btn {
@@ -80,16 +109,6 @@
     -webkit-transition: background-color 0.2s ease;
     -o-transition: background-color 0.2s ease;
     transition: background-color 0.2s ease;
-}
-
-.tickets-img {
-    height: 350px;
-    width: auto;
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 15px;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 /* QR Animation */
@@ -198,15 +217,26 @@
     30%, 40% { transform: scale(1.05)}
     40%, 50% { transform: scale(1)}
 }
-
 /* End Social Media animation */
 
 /* Breakpoints */
-/* md-breakpoint */
-@media (min-width: 765px) {
+/* sm-breakpoint */
+@media (min-width: 576px) {
+    .title {
+        font-size: 2.7em
+    }
+}
+/* End sm-breakpoint */
+
+/* md-breakpoint */ 
+@media (min-width: 768px) {
     .header-padding.section-padding {
         padding-top: 175px !important;
         padding-bottom: 100px !important
+    }
+
+    .section-padding {
+        margin-bottom: 100px;
     }
 
     .title-section {
@@ -226,7 +256,35 @@
         height: 100px
     }
 
+    .svg-col {
+        padding-top: 0px
+    }
+
     .cta.btn {
         font-size: 1.25em;
     }
+
+    .section-row {
+        opacity: 1;
+    }
+    
+    #facebook,
+    #twitter,
+    #insta {
+        animation: none;
+        transition-duration: 0.3s;
+    }
+    
+    #facebook:hover {
+        transform: translateX(10px) translateY(-10px)
+    }
+    
+    #twitter:hover {
+        transform: translateX(10px)
+    }
+    
+    #insta:hover {
+        transform: translateX(10px) translateY(10px)
+    }
 }
+/* End sm-breakpoint */
