--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -63,6 +63,11 @@ body {
     font-weight: 500;
 }
 
+.section-text {
+    line-height: 1.75em;
+    margin-top: 0.5em;
+}
+
 @media (min-width: 765px) {
     .section-padding {
         padding-top: 100px;
