--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<app-header></app-header><div class="container-fluid p-0">
     <div class="row mnh-100vh no-gutters">
         <div class="col">
 
@@ -451,4 +451,4 @@
 
         </div>
     </div>
-</div>
+</div><app-footer></app-footer>
