--- a/tickevents-placeholder/src/app/pricing/pricing.component.html
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<app-header></app-header><div class="container-fluid p-0">
 
 	<!-- Header row, 50vh on full screen, 100vh on mobile -->
 	<div class="row no-gutters bg-pricing header-padding">
@@ -261,4 +261,4 @@
 		</div>
 	</div>
 
-</div>
+</div><app-footer></app-footer>
