--- a/tickevents-placeholder/src/app/shared/header/header.component.html
+++ b/tickevents-placeholder/src/app/shared/header/header.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top w p-0">
     <div class="container p-0">
-        <!-- Logo on large displays (expanded navbar) -->
         <div class="navbar-brand pl-3 pl-md-0" routerLink="/home">
             <img src="../../assets/Logo Black.svg">
         </div>
@@ -12,12 +11,14 @@
 
         <div class="collapse navbar-collapse mt-2 p-3 pr-md-0 ft-alata fs-lr" id="navContent">
             <div class="navbar-nav b ml-auto">
-                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/home"
-                    routerLinkActive="active">Home</a>
-                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/pricing" routerLinkActive="active">Pricing</a>
-                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</a>
-                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/getting-started" routerLinkActive="active">Aan de slag</a>
-
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
+                    routerLink="/home" routerLinkActive="active">Home</a>
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
+                    routerLink="/pricing" routerLinkActive="active">Prijzen</a>
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
+                    routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</a>
+                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0" data-toggle="collapse" data-target=".navbar-collapse.show"
+                    routerLink="/getting-started" routerLinkActive="active">Aan de slag</a>
             </div>
         </div>
     </div>
