--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0 w header-padding">
+<app-header></app-header><div class="container-fluid p-0 w header-padding">
 
 	<!-- Title screen. First screen you'll see when opening the website -->
 	<div class="row no-gutters mnh-100vh">
@@ -17,42 +17,181 @@
 			<!-- End background -->
 
 			<!-- content overlay -->
-			<div class="row content mnh-100 no-gutters justify-content-center">
-				<div class="container px-3 px-md-0 overflow-hidden">
-					<div class="row mnh-80 align-content-center pt-5">
-						<div class="col-12">
-							<h1 class="title ft-montserrat">
-								<span class="title-animation-1 animate__animated animate__fadeInDown">1 </span>
-								<span class="title-animation-2 animate__animated animate__fadeInDown">EURO </span>
-								<span class="title-animation-3 animate__animated animate__fadeInDown">PER </span>
-								<span class="title-animation-4 animate__animated animate__fadeInDown">TICKET.</span><br>
-								<span class="title-animation-5 animate__animated animate__fadeInDown">ALL </span>
-								<span class="title-animation-6 animate__animated animate__fadeInDown">INCLUSIVE</span></h1>
-						</div>
-						<div class="col-12 col-md-7 mt-4" [ngsReveal]="scrollUpWithDelay">
-							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe
-								servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!
-							</p>
-						</div>
-						<div class="w-100"></div>
-						<div class="col-6 col-md-5 col-lg-4 col-xl-3 my-3"  [ngsReveal]="scrollUpWithDelay">
-							<a class="btn w-100" type="button" routerLink="/getting-started">
-								Aan de slag
-							</a>
+			<div class="row content no-gutters justify-content-center  ">
+				<div class="col  ">
+					<div class="container px-3 px-md-0  ">
+						<div class="row no-gutters mnh-100vh align-content-center  ">
+							<div class="col-12">
+								<h1 class="title ft-montserrat">
+									<span class="title-animation-1 animate__animated animate__fadeInDown">1 </span>
+									<span class="title-animation-2 animate__animated animate__fadeInDown">EURO </span>
+									<span class="title-animation-3 animate__animated animate__fadeInDown">PER </span>
+									<span
+										class="title-animation-4 animate__animated animate__fadeInDown">TICKET.</span><br>
+									<span class="title-animation-5 animate__animated animate__fadeInDown">ALL </span>
+									<span
+										class="title-animation-6 animate__animated animate__fadeInDown">INCLUSIVE</span>
+								</h1>
+							</div>
+							<div class="col-12  " [ngsReveal]="scrollUpWithDelay">
+								<div class="row no-gutters  ">
+									<div class="col-12 col-md-7">
+										<p class="subtitle">Hou meer geld over aan het einde van je evenement met
+											scherpe
+											servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen
+											organiseren!
+										</p>
+
+										<div class="row no-gutters">
+											<div class="col-6 my-3" [ngsReveal]="scrollUpWithDelay">
+												<a class="btn w-100" type="button" routerLink="/getting-started">
+													Aan de slag
+												</a>
+											</div>
+										</div>
+									</div>
+									<div class="col-12 col-md-5 ">
+										<svg id="balloon" xmlns="http://www.w3.org/2000/svg" width="443.18"
+											height="444.77" viewBox="0 0 443.18 444.77">
+											<title>balloon_man</title>
+											<g id="cloud">
+												<path
+													d="M206.18,163H219.8a36.93,36.93,0,0,1-2.8-14c0-27.61,31.34-50,70-50,3.16,0,6.27.16,9.32.45A87.53,87.53,0,0,0,142,93.32C176.2,104.9,201.39,131.29,206.18,163Z"
+													transform="translate(-0.82)" style="fill:#d6e8f2" />
+												<path
+													d="M295.32,99.45c-3.05-.29-6.16-.45-9.32-.45-38.66,0-70,22.39-70,50a36.93,36.93,0,0,0,2.8,14h67.49a11.77,11.77,0,0,1-.29-2.5c0-7.32,6.72-14,17.92-19.28,11.67-5.49,28.23-9.37,47.12-10.71C341.85,114,320.74,101.87,295.32,99.45Z"
+													transform="translate(-0.82)" style="fill:#9bbdce" />
+												<path
+													d="M364.5,130c-4.94,0-9.77.18-14.46.51-18.89,1.34-35.45,5.22-47.12,10.71-11.2,5.25-17.92,12-17.92,19.28a11.77,11.77,0,0,0,.29,2.5H443.71a11.77,11.77,0,0,0,.29-2.5C444,143.66,408.41,130,364.5,130Z"
+													transform="translate(-0.82)" style="fill:#cbe9f4" />
+												<path
+													d="M143,93.32A121.58,121.58,0,0,0,104,87C51,87,7.29,120.14.82,163H207.18C202.39,131.29,177.2,104.9,143,93.32Z"
+													transform="translate(-0.82)" style="fill:#e6f5ff" />
+											</g>
+											<g id="balloon_man">
+												<g id="coin_ropes">
+													<line x1="344.23" y1="77" x2="386.18" y2="202"
+														style="fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:2.516778396653635px" />
+													<line x1="428.12" y1="77" x2="386.18" y2="202"
+														style="fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:2.516778396653635px" />
+												</g>
+												<rect x="378.18" y="200" width="16" height="66" rx="5.9"
+													style="fill:#fffab9" />
+												<rect x="389.79" y="346.58" width="20.68" height="85.31" rx="2.32"
+													transform="translate(51.99 -47.78) rotate(7.31)"
+													style="fill:#fffab9" />
+												<path
+													d="M343.35,264.46l-.15.5,1.28-.32C344.1,264.59,343.73,264.53,343.35,264.46Z"
+													transform="translate(-0.82)" style="fill:none" />
+												<path
+													d="M363.11,244.29c-3.76-4.38-2.23-7.48-4.66-10.31a3.74,3.74,0,0,0-1.54-1.06C349,250.54,347.78,252.65,346,257c-.39.95-1.43,3.57-2.65,7.46.38.07.75.13,1.13.18l18.95-4.76a24.76,24.76,0,0,0,8.12-10.47c.18-.44.36-.9.52-1.36a4,4,0,0,1-1,.43C367.52,249.43,363.81,245.1,363.11,244.29Z"
+													transform="translate(-0.82)" style="fill:#fffab9" />
+												<path
+													d="M301,294.67a1,1,0,0,1-.51-.13L292.78,290a1,1,0,0,1-.46-.62,1,1,0,0,1,.1-.76L301,274a1,1,0,0,1,.86-.5,1,1,0,0,1,.51.14l7.74,4.56a1,1,0,0,1,.46.62,1,1,0,0,1-.11.75l-8.58,14.57A1,1,0,0,1,301,294.67Z"
+													transform="translate(-0.82)" style="fill:#e86474" />
+												<path
+													d="M301.87,273.92a.62.62,0,0,1,.32.09l7.74,4.56a.62.62,0,0,1,.29.38.6.6,0,0,1-.07.47L301.57,294a.64.64,0,0,1-.54.31.59.59,0,0,1-.32-.09L293,289.65a.62.62,0,0,1-.29-.38.63.63,0,0,1,.07-.48l8.58-14.56a.61.61,0,0,1,.54-.31m0-.75a1.38,1.38,0,0,0-1.19.68l-8.58,14.56a1.38,1.38,0,0,0,.49,1.89l7.74,4.56a1.37,1.37,0,0,0,.7.19,1.35,1.35,0,0,0,1.18-.68l8.59-14.57a1.38,1.38,0,0,0-.49-1.88l-7.74-4.56a1.37,1.37,0,0,0-.7-.19Z"
+													transform="translate(-0.82)" style="fill:#fff" />
+												<line x1="298.47" y1="276.2" x2="308.59" y2="282.16"
+													style="fill:none;stroke:#fff;stroke-linecap:round;stroke-miterlimit:10;stroke-dasharray:1,2" />
+												<rect x="290.05" y="273.38" width="10.99" height="18.91" rx="1"
+													style="fill:#e86474" />
+												<path
+													d="M300.86,273.75a.63.63,0,0,1,.63.63v16.9a.63.63,0,0,1-.63.63h-9a.63.63,0,0,1-.63-.63v-16.9a.63.63,0,0,1,.63-.63h9m0-.75h-9a1.38,1.38,0,0,0-1.38,1.38v16.9a1.38,1.38,0,0,0,1.38,1.38h9a1.38,1.38,0,0,0,1.38-1.38v-16.9a1.38,1.38,0,0,0-1.38-1.38Z"
+													transform="translate(-0.82)" style="fill:#fff" />
+												<line x1="289.74" y1="278.11" x2="301.34" y2="278.11"
+													style="fill:none;stroke:#fff;stroke-linecap:round;stroke-miterlimit:10;stroke-width:0.994px;stroke-dasharray:1,2" />
+												<path
+													d="M329.89,300.8l-12.66-6.09,8.12-16.85c0,.07-.09.12-.13.19L315.16,299l-7.84-8.51L305.09,288a4.64,4.64,0,0,0-1.29-1,4.82,4.82,0,0,0-5.52.69l-4.68,4.31a4.79,4.79,0,0,0-1.54,3.71c0,.15,0,.3,0,.45a4.76,4.76,0,0,0,1.22,2.64l16.43,17.88,1.89,2a5.83,5.83,0,0,0,.88.52l2.77,1.34,1.12.54a5.26,5.26,0,0,0,7-2.46l7.2-15Z"
+													transform="translate(-0.82)" style="fill:#ede6b9" />
+												<path d="M311.47,318.6a1.21,1.21,0,0,0,.16.16l-1.89-2Z"
+													transform="translate(-0.82)" style="fill:#fffab9" />
+												<path
+													d="M378,256.42a14,14,0,0,1,17,10.16l18,71.88.17,0-18-71.59a14.47,14.47,0,0,0-17.56-10.51l-14.2,3.56-.39.29Z"
+													transform="translate(-0.82)" style="fill:#ff767d" />
+												<path d="M345,264.7l-.51-.06-1.28.32-.06.2Z"
+													transform="translate(-0.82)" style="fill:#ff767d" />
+												<path d="M345,264.7,363,260.17l.39-.29-18.95,4.76Z"
+													transform="translate(-0.82)" style="fill:#ff767d" />
+												<path
+													d="M349.1,437.61a7.64,7.64,0,0,1-9.22,5.62L334.62,442a7.62,7.62,0,0,1-5.62-9.21l1.31-5.42-.39-.1-2.49,10.28a2.85,2.85,0,0,0,2.1,3.45L345,444.69a2.85,2.85,0,0,0,3.45-2.11l2.5-10.27-.49-.12Z"
+													transform="translate(-0.82)" style="fill:#896b43" />
+												<path
+													d="M329,432.74a7.62,7.62,0,0,0,5.62,9.21l5.26,1.28a7.64,7.64,0,0,0,9.22-5.62l1.31-5.42-20.1-4.87Zm5.64-.22,4.86,3,5.69-.34-5.69.34,4.86,3-4.86-3-5.69.34,5.69-.34Z"
+													transform="translate(-0.82)" style="fill:#896b43" />
+												<rect x="413.13" y="338.43" width="0.17" height="1.18"
+													transform="translate(-70.94 110.84) rotate(-14.09)"
+													style="fill:#406aa8" />
+												<path
+													d="M353.53,359.16l0-.3c-.18-1.61-.37-2.92-.5-3.86,0-.09,0-.16,0-.25l-.18-1.17-8.65,2.18-.41.1L344,357l1,4-14.91,61.51c.6-.51,1.19-1,1.77-1.55A72.65,72.65,0,0,0,341,411c8.58-11.37,11.78-23.92,12.73-34.4.11-1.3.2-2.57.25-3.8A89.29,89.29,0,0,0,353.53,359.16Z"
+													transform="translate(-0.82)" style="fill:#3a6393" />
+												<path
+													d="M415.61,347l-2.17-8.66-.28.07.29,1.14-.17,0-.29-1.14-60.21,15.12.18,1.17c0,.09,0,.16,0,.25.13.94.32,2.25.5,3.86l0,.3A89.29,89.29,0,0,1,354,372.8c-.05,1.23-.14,2.5-.25,3.8-1,10.48-4.15,23-12.73,34.4a72.65,72.65,0,0,1-9.14,9.93c-.58.52-1.17,1-1.77,1.55L329,427l.92.22.39.1,20.1,4.87.49.12h0l14.2-58.57,26.18-6.57L384,424l22.19,2.85,9.37-73A13.49,13.49,0,0,0,415.61,347Z"
+													transform="translate(-0.82)" style="fill:#406aa8" />
+												<path
+													d="M352.78,353.58c-3.07-19-10.56-18.44-13.78-39.58a103.35,103.35,0,0,1-.41-26.77v-.07c.18-1.59.38-3.14.61-4.64.11-.75.23-1.48.35-2.21a122.55,122.55,0,0,1,3.58-15.15l.06-.2-6.95,1.75a14.44,14.44,0,0,0-10.38,10.05l-.52,1.1-8.12,16.85,12.66,6.09.73,2.93L344,357h0l-.28-1.14.41-.1Z"
+													transform="translate(-0.82)" style="fill:#ea717d" />
+												<path
+													d="M395,266.8V246H379v10.21c-.35.06-.69.12-1,.21L363,260.17,345,264.7l-1.85.46a122.55,122.55,0,0,0-3.58,15.15c-.12.73-.24,1.46-.35,2.21-.23,1.5-.43,3.05-.61,4.64v.07A103.35,103.35,0,0,0,339,314c3.22,21.14,10.71,20.61,13.78,39.58L413,338.46Z"
+													transform="translate(-0.82)" style="fill:#ff767d" />
+												<path
+													d="M330.05,232c-1.21-.61-4.19-2.27-6.25-3.43a25.29,25.29,0,0,0-2.72,12.3V251h3a25.48,25.48,0,0,0,3.57,4.77A73.89,73.89,0,0,0,338,251.83c.61,2.22-2.32,5-6.91,7a29.91,29.91,0,0,0,10.46,5.22c.57.15,1.16.28,1.76.38,1.22-3.89,2.26-6.51,2.65-7.46,1.78-4.35,3-6.46,10.91-24.08C351.82,231,340.68,237.32,330.05,232Z"
+													transform="translate(-0.82)" style="fill:#ede6b9" />
+												<path
+													d="M351.63,211.85A25.5,25.5,0,0,1,355,212,20.23,20.23,0,0,0,351.63,211.85Z"
+													transform="translate(-0.82)" style="fill:#a08133" />
+												<path
+													d="M368.44,219.3a32.47,32.47,0,0,0-4.08-3.29c-1.19,2.84-2.64,6.13-4.36,10l-3.09,6.92a3.74,3.74,0,0,1,1.54,1.06c2.43,2.83.9,5.93,4.66,10.31.7.81,4.41,5.14,7.94,4.19a4,4,0,0,0,1-.43c3.13-1.84,4.74-7.77,4.66-12.2C376.61,229.64,373.11,223.72,368.44,219.3Z"
+													transform="translate(-0.82)" style="fill:#a08133" />
+												<path
+													d="M358.8,213a17.44,17.44,0,0,0-3.78-1,25.5,25.5,0,0,0-3.39-.19c-8,.2-16.17,4.8-22,8.93a72,72,0,0,0-8,6.56l2.15,1.21c2.06,1.16,5,2.82,6.25,3.43,10.63,5.34,21.77-1,26.86.94L360,226c1.72-3.86,3.17-7.15,4.36-10A28.33,28.33,0,0,0,358.8,213Z"
+													transform="translate(-0.82)" style="fill:#896d2f" />
+												<path
+													d="M443,50.5A50.5,50.5,0,0,0,392.5,0c-1.65,0-3.27.09-4.88.24.14.25.26.51.38.77a50.5,50.5,0,0,1,12,99.44A50.51,50.51,0,0,0,443,50.5Z"
+													transform="translate(-0.82)" style="fill:#999433" />
+												<path
+													d="M380.72,99.6c-.35.61-.7,1.2-1.07,1.79a50.84,50.84,0,0,0,20.31-.94,51.08,51.08,0,0,1-7.46.55A50.25,50.25,0,0,1,380.72,99.6Z"
+													transform="translate(-0.82)" style="fill:#bfbf3a" />
+												<path
+													d="M438,51.5A50.5,50.5,0,0,0,388,1a40.08,40.08,0,0,1,2.37,6.09A44.5,44.5,0,0,1,387.5,96a43.77,43.77,0,0,1-4.75-.26c-.64,1.32-1.32,2.61-2,3.86A50.25,50.25,0,0,0,392.5,101a51.08,51.08,0,0,0,7.46-.55A50.53,50.53,0,0,0,438,51.5Z"
+													transform="translate(-0.82)" style="fill:#bfbf3a" />
+												<path
+													d="M394.77,21.43q-.22,3.46-.22,9.6V61.17a15.44,15.44,0,0,0,.24,3.16,3.73,3.73,0,0,0,.82,1.73,4,4,0,0,0,1.72,1,14,14,0,0,0,2.81.57q1.69.21,4.47.27v3.29H390.22a96.18,96.18,0,0,1-7.47,24.5,43.77,43.77,0,0,0,4.75.26,44.5,44.5,0,0,0,2.87-88.9,69.6,69.6,0,0,1,2.55,14.33Z"
+													transform="translate(-0.82)" style="fill:#dbd749" />
+												<path
+													d="M404.61,68q-2.78-.06-4.47-.27a14,14,0,0,1-2.81-.57,4,4,0,0,1-1.72-1,3.73,3.73,0,0,1-.82-1.73,15.44,15.44,0,0,1-.24-3.16V31q0-6.13.22-9.6h-1.85A167.31,167.31,0,0,1,393,43a211,211,0,0,1-2.78,28.24h14.39Z"
+													transform="translate(-0.82)" style="fill:#9b9635" />
+												<path
+													d="M387.5,7c1,0,1.92,0,2.87.1A40.08,40.08,0,0,0,388,1h-.5a51.08,51.08,0,0,0-7.46.55,50.5,50.5,0,0,0-.39,99.84c.37-.59.72-1.18,1.07-1.79.71-1.25,1.39-2.54,2-3.86A44.5,44.5,0,0,1,387.5,7Z"
+													transform="translate(-0.82)" style="fill:#a3a034" />
+												<path
+													d="M343,51.5a44.49,44.49,0,0,0,39.75,44.24,96.18,96.18,0,0,0,7.47-24.5H373.49V68a51.08,51.08,0,0,0,5.72-.48,6.91,6.91,0,0,0,2.61-.92,3.56,3.56,0,0,0,1.32-1.73,11.71,11.71,0,0,0,.41-3.65V35.1A3.29,3.29,0,0,0,383,33a1.92,1.92,0,0,0-1.53-.65,6.29,6.29,0,0,0-2.54.83,58.83,58.83,0,0,0-5.39,3.39l-2.2-3.82,18.82-11.29h2.77A69.6,69.6,0,0,0,390.37,7.1c-.95-.06-1.9-.1-2.87-.1A44.5,44.5,0,0,0,343,51.5Z"
+													transform="translate(-0.82)" style="fill:#c1bb44" />
+												<path
+													d="M392.92,21.43h-2.77L371.33,32.72l2.2,3.82a58.83,58.83,0,0,1,5.39-3.39,6.29,6.29,0,0,1,2.54-.83A1.92,1.92,0,0,1,383,33a3.29,3.29,0,0,1,.56,2.13V61.17a11.71,11.71,0,0,1-.41,3.65,3.56,3.56,0,0,1-1.32,1.73,6.91,6.91,0,0,1-2.61.92,51.08,51.08,0,0,1-5.72.48v3.29h16.73A211,211,0,0,0,393,43,167.31,167.31,0,0,0,392.92,21.43Z"
+													transform="translate(-0.82)" style="fill:#7f792e" />
+											</g>
+										</svg>
+									</div>
+								</div>
+
+							</div>
 						</div>
 					</div>
 
 					<!-- Chevrons -->
 					<div class="row">
 						<div class="col-12">
-							<app-chevron></app-chevron> 
+							<app-chevron></app-chevron>
 						</div>
 					</div>
 					<!-- End Chevrons -->
 
+
 				</div>
 			</div>
 			<!-- End content-overlay -->
+
 		</div>
 	</div>
 
@@ -71,14 +210,14 @@
 					<!-- Text section -->
 					<div class="col-12 col-md-5 h-auto order-1 order-md-2">
 						<div class="row no-gutters align-content-center h-100">
-							<div class="col-12"  [ngsReveal]="scrollUp">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h5 class="m-0 pink">Lage servicekosten</h5>
 							</div>
-							<div class="col-12"  [ngsReveal]="scrollUp">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h2 class="section-title">Lage servicekosten = meer winst onder de streep
 								</h2>
 							</div>
-							<div class="col-12"  [ngsReveal]="scrollUp">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<p>Jij wilt zoveel mogelijk winst maken uit jouw verkochte ticket. Tickevents snapt dit,
 									en bied
 									jou de scherpe servicekosten van €1,- per verkocht ticket. Omdat dit platform met de
@@ -94,7 +233,7 @@
 	</div>
 
 	<!-- Reviews section carousel -->
-	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh" >
+	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh">
 		<div class="container px-3 px-md-0">
 			<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner" [ngsReveal]="scrollUp">
@@ -190,7 +329,8 @@
 		<div class="col">
 			<div class="container px-3 px-md-0">
 				<div class="row">
-					<div class="col-12 col-md-7 mt-3 mt-md-0 text-center text-md-left order-2 order-md-1" [ngsReveal]="scrollUp">
+					<div class="col-12 col-md-7 mt-3 mt-md-0 text-center text-md-left order-2 order-md-1"
+						[ngsReveal]="scrollUp">
 						<img src="../../assets/combo.svg" alt="tickets" class="tickets-img-2 px-3">
 					</div>
 					<div class="col-12 col-md-5 order-1 order-md-2">
@@ -243,7 +383,8 @@
 								<h2 class="section-title w">Aan de slag met Tickevents</h2>
 							</div>
 							<div class="col-12" [ngsReveal]="scrollUp">
-								<p class="w">Begin vandaag nog met het verhogen van je winst. Meld je aan voor meer informatie.</p>
+								<p class="w">Begin vandaag nog met het verhogen van je winst. Meld je aan voor meer
+									informatie.</p>
 							</div>
 							<div class="col-12" [ngsReveal]="scrollUp">
 								<a class="btn mt-2 mnw-50" type="button" routerLink="/getting-started">Aan de slag</a>
@@ -257,4 +398,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><app-footer></app-footer>
