--- a/tickevents-placeholder/src/app/new-home/header/header.component.html
+++ b/tickevents-placeholder/src/app/new-home/header/header.component.html
@@ -4,7 +4,7 @@
     <!-- Navbar Logo -->
     <a routerLink="/new-home">
         <svg id="Logo_White" data-name="Logo White" xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink" height="30" viewBox="0 0 128 22.7">
+            xmlns:xlink="http://www.w3.org/1999/xlink" height="40" viewBox="0 0 128 22.7">
             <defs>
                 <linearGradient id="logo-gradient" x1="1.12" y1="22.97" x2="127.05" y2="1.97"
                     gradientUnits="userSpaceOnUse">
@@ -21,7 +21,7 @@
     <!-- Navbar button -->
     <button class="navbar-toggler pr-0" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav"
         aria-expanded="false" aria-label="Toggle navigation" (click)="changeBackground()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" viewBox="0 0 23 18">
+        <svg xmlns="http://www.w3.org/2000/svg" height="27" viewBox="0 0 23 18">
             <g id="Group_361" data-name="Group 361" transform="translate(-387 -40)">
                 <rect id="Rectangle_16" data-name="Rectangle 16" width="23" height="4" rx="2"
                     transform="translate(387 40)" />
@@ -36,10 +36,10 @@
 
     <div class="collapse navbar-collapse ft-alata text-center mt-2 mt-lg-0" id="nav">
         <ul class="navbar-nav">
-            <li class="nav-item py-1 py-lg-0 active" routerLink="/new-home" routerLinkActive="active">Home</li>
-            <li class="nav-item py-1 py-lg-0" routerLink="/about" routerLinkActive="active">Over on</li>
-            <li class="nav-item py-1 py-lg-0" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
-            <li class="nav-item py-1 py-lg-0" routerLink="/getstarted" routerLinkActive="active">Aan de slag</li>
+            <li class="nav-item py-2 py-lg-0 active" routerLink="/new-home" routerLinkActive="active">Home</li>
+            <li class="nav-item py-2 py-lg-0" routerLink="/about" routerLinkActive="active">Over ons</li>
+            <li class="nav-item py-2 py-lg-0" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
+            <li class="nav-item py-2 py-lg-0" routerLink="/getstarted" routerLinkActive="active">Aan de slag</li>
         </ul>
     </div>
 </nav>
