--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -8,6 +8,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: 'Montserrat', sans-serif !important;
+    font-size: 18px;
 }
 
 .btn {
