--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -86,11 +86,11 @@
 
 
 	<!-- Jumping man section -->
-	<div class="jumping-man-section row no-gutters">
+	<div class="jumping-man-section row no-gutters mt-5">
 		<div class="col-12 overflow-hidden">
-			<img src="../../assets/new-start-jumping-man.svg" class="jumpig-man">
+			<img src="../../assets/new-start-jumping-man-mobile-01.svg" class="w-100 box-shadow">
 		</div>
-		<div class="col-12 ft-alata px-3">
+		<div class="col-12 ft-alata px-3 mt-5">
 			<h1 class="section-header m-0">Minder servicekosten</h1>
 			<h1 class="section-header m-0 purple mt-4px">Meer winst</h1>
 			<p class="ft-montserrat mt-4px">Met onze scherpe servicekosten haal jij meer winst uit jouw kaartverkoop.
@@ -102,12 +102,149 @@
 
 
 	<!-- Cards section -->
-	<div class="row no-gutters cards-section p-relative">
-		<div class="col-12 p-absolute">
+	<div class="row w no-gutters px-3 cards-section justify-content-center mt-5">
+		<div class="col-6 card-wrapper order-1 ">
+			<div class="card p-relative box-shadow">
+				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
+					viewBox="0 0 165 250">
+					<defs>
+						<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42" y2="539.96"
+							gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#5b36f8" />
+							<stop offset="1" stop-color="#2e1b7c" />
+						</linearGradient>
+						<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51" y2="41.44"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#221559" />
+							<stop offset="1" stop-color="#442ab1" />
+						</linearGradient>
+					</defs>
+					<title>new-start-card-background</title>
+					<path id="Path_1664-2" data-name="Path 1664-2"
+						d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
+						style="fill:url(#Naamloos_verloop_3)" />
+					<path
+						d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
+						style="fill:url(#Naamloos_verloop_11)" />
+				</svg>
+				<div class="row">
+					<div class="col-12">
+						<h1 class="card-header ft-alata text-center">Goedkoop</h1>
+					</div>
+				</div>
+				<div class="row h-100 align-content-center">
+					<div class="col-12">
+						<p class="card-text text-center">Met onze scherpe servicekosten van €1,- houdt je de prijs van
+							je tickets laag,
+							en heb
+							je onder de streep meer te besteden.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-6 card-wrapper order-2">
+			<div class="card p-relative box-shadow">
+				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
+					viewBox="0 0 165 250">
+					<defs>
+						<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42" y2="539.96"
+							gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#5b36f8" />
+							<stop offset="1" stop-color="#2e1b7c" />
+						</linearGradient>
+						<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51" y2="41.44"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#221559" />
+							<stop offset="1" stop-color="#442ab1" />
+						</linearGradient>
+					</defs>
+					<title>new-start-card-background</title>
+					<path id="Path_1664-2" data-name="Path 1664-2"
+						d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
+						style="fill:url(#Naamloos_verloop_3)" />
+					<path
+						d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
+						style="fill:url(#Naamloos_verloop_11)" />
+				</svg>
+				<div class="row">
+					<div class="col-12">
+						<h1 class="card-header ft-alata text-center">Persoonlijk</h1>
+					</div>
+				</div>
+				<div class="row h-100 align-content-center">
+					<div class="col-12">
+						<p class="card-text text-center">Tickevents is persoonlijk. Je kan altijd contact opnemen voor
+							advies of hulp
+							bij het
+							opzetten van je evenement</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-6 card-wrapper mt-5 order-3">
+			<div class="card p-relative box-shadow">
+				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
+					viewBox="0 0 165 250">
+					<defs>
+						<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42" y2="539.96"
+							gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#5b36f8" />
+							<stop offset="1" stop-color="#2e1b7c" />
+						</linearGradient>
+						<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51" y2="41.44"
+							gradientUnits="userSpaceOnUse">
+							<stop offset="0" stop-color="#221559" />
+							<stop offset="1" stop-color="#442ab1" />
+						</linearGradient>
+					</defs>
+					<title>new-start-card-background</title>
+					<path id="Path_1664-2" data-name="Path 1664-2"
+						d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
+						style="fill:url(#Naamloos_verloop_3)" />
+					<path
+						d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
+						style="fill:url(#Naamloos_verloop_11)" />
+				</svg>
+				<div class="row">
+					<div class="col-12">
+						<h1 class="card-header ft-alata text-center">Eenvoudig</h1>
+					</div>
+				</div>
+				<div class="row h-100 align-content-center">
+					<div class="col-12">
+						<p class="card-text text-center">Met onze technische middelen, zoals de Ticketscanner en het
+							Adminpanel,
+							organiseer je
+							gemakkelijk jouw evenement</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End cars section -->
+
+	<!-- Success section -->
+	<div class="row no-gutters mt-4 px-3 success-section">
+		<div class="col-12">
+			<h1 class="section-title ft-alata">
+				"Tickevents gaat 100% voor <span class="purple">jouw succes</span>"
+			</h1>
+			<p class="mt-3">
+				Tickevents is opgericht om meer te bieden dan alleen goedkope tickets. Wij willen jouw evenement tot een
+				onvergetelijk succes maken. Wij willen onze kennis en krachten met jou bundelen, om je zo de
+				mogelijkheden te geven jouw bezoekers het evenement van hun leven te geven.
+			</p>
+		</div>
+		<div class="col-12">
 
 		</div>
 	</div>
-
-	<!-- End cars section -->
+	<!-- End Success Section -->
 
 </div>
