--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -68,6 +68,12 @@ body {
     margin-top: 0.5em;
 }
 
+.box-shadow {
+    -webkit-box-shadow: 12px 12px 18px 0px rgba(0,0,0,0.16);
+    -moz-box-shadow: 12px 12px 18px 0px rgba(0,0,0,0.16);
+    box-shadow: 12px 12px 18px 0px rgba(0,0,0,0.16);
+}
+
 @media (min-width: 765px) {
     .section-padding {
         padding-top: 100px;
